# optimization

./: Cargo.toml  load.py  train.py
src/: assert.rs  conjugate_gradient.rs  gauss_seidel.rs  jacobi.rs  lib.rs  linear_algebra.rs  lu_decomposition.rs  main.rs  newton.rs  quasi_newton.rs  regression.rs
src/regression/: logistic.rs
