[package]
name = "optimization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "logistic"
path = "src/bin/main.rs"

[lib]
name = "optimization"
path = "src/lib.rs"

[features]
default = []
gauss-seidel = []

[dependencies]
ndarray = "0.15.6"
csv = "1.1"
argmin = { version = "0.7" }
argmin-math = { version = "0.2", features = ["nalgebra_latest-serde"] }
